--- a/2020_Mael_Brocher/code+data/source/flask/app/static/css/style.css
+++ b/2020_Mael_Brocher/code+data/source/flask/app/static/css/style.css
@@ -461,3 +461,41 @@ label.right {
   border-radius: 10px;
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
 }
+
+.loaderheatmap {
+  border: 2px solid #3498db; /* Light grey */
+  border-top: 2px solid #f3f3f3; /* Blue */
+  border-radius: 50%;
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  margin-left: 5px;
+  animation: spin2 2s linear infinite;
+}
+
+@keyframes spin2 {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+.loadertext {
+  font-family:Arial;
+  font-size:15px;
+  display:inline-block;
+  padding-left:5px;
+}
+
+:root {
+  --borderWidth: 3px;
+  --height: 12px;
+  --width: 6px;
+  --borderColor: #78b13f;
+}
+
+.loadingReady {
+  display: inline-block;
+  transform: rotate(45deg);
+  height: var(--height);
+  width: var(--width);
+  border-bottom: var(--borderWidth) solid var(--borderColor);
+  border-right: var(--borderWidth) solid var(--borderColor);
+}
