use case and comment

--- a/2020_Mael_Brocher/source/app/templates/home.html
+++ b/2020_Mael_Brocher/source/app/templates/home.html
@@ -8,7 +8,7 @@
   <title>Password Visualisation</title>
   <meta name="description" content="Paracoord Password Visualisation">
   <meta name="author" content="Gary Read">
-
+  <!-- I only changed links to file to work with Flask-->
   <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
   <script src="{{ url_for('static', filename='js/d3.js') }}"> </script>
   <script src="{{ url_for('static', filename='js/date.js') }}"> </script>
